--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "lodash": "^4.17.5",
         "moment": "^2.23.0",
         "popper.js": "^1.12",
+        "vee-validate": "^2.1.4",
         "vue": "^2.5.17",
         "vue-router": "^3.0.2",
         "vuex": "^3.0.1"
