--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.1.3",
+        "cartalyst/sentinel": "^2.0",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.7.*",
         "laravel/tinker": "^1.0"
@@ -35,7 +36,8 @@
         "psr-4": {
             "App\\": "app/",
             "Comptechsoft\\Usermanagement\\": "packages/comptech-soft/users-management/src/",
-            "Comptechsoft\\Adminmodern\\": "packages/comptech-soft/admin-modern/src/"
+            "Comptechsoft\\Adminmodern\\": "packages/comptech-soft/admin-modern/src/",
+            "Comptechsoft\\Appcore\\": "packages/comptech-soft/app-core/src/"
         },
         "classmap": [
             "database/seeds",
