--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,3 +1,4 @@
 {
-    "/app-assets/js/login/index.js": "/app-assets/js/login/index.js"
+    "/app-assets/js/login/index.js": "/app-assets/js/login/index.js",
+    "/app-assets/js/welcome/index.js": "/app-assets/js/welcome/index.js"
 }
