--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "axios": "^0.18",
         "bootstrap": "^4.0.0",
         "comptechsoft-admin-modern": "^1.0.18",
+        "comptechsoft-core-libs": "^1.0.6",
         "cross-env": "^5.1",
         "jquery": "^3.2",
         "laravel-mix": "^2.0",
