--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "babel-preset-env": "^1.7.0",
         "bootstrap": "^4.2.1",
         "comptechsoft-admin-modern": "^1.0.21",
+        "comptechsoft-apps": "^1.0.4",
         "comptechsoft-core-libs": "^1.0.19",
         "cross-env": "^5.1",
         "jquery": "^3.2",
