--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.1.3",
+        "barryvdh/laravel-debugbar": "^3.2",
         "cartalyst/sentinel": "^2.0",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.7.*",
@@ -64,4 +65,3 @@
         ]
     }
 }
-
