--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "require": {
         "php": "^7.1.3",
         "barryvdh/laravel-debugbar": "^3.2",
+        "baum/baum": "^1.1",
         "cartalyst/sentinel": "^2.0",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.7.*",
@@ -37,6 +38,7 @@
         "psr-4": {
             "App\\": "app/",
             "Comptechsoft\\Usermanagement\\": "packages/comptech-soft/users-management/src/",
+            "Comptechsoft\\Geomanagement\\": "packages/comptech-soft/geo-management/src/",
             "Comptechsoft\\Adminmodern\\": "packages/comptech-soft/admin-modern/src/",
             "Comptechsoft\\Appcore\\": "packages/comptech-soft/app-core/src/"
         },
